--- a/postgresql-compose.yml
+++ b/postgresql-compose.yml
@@ -3,15 +3,14 @@
 version: '3'
 
 services:
-  postgres-db:
+  postgres:
     image: postgres
     restart: always
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: init
+      POSTGRES_USER: note-admin
+      POSTGRES_PASSWORD: dENgczA44IsDn
+      POSTGRES_DB: note-db
     ports:
-      - 5433:5433
       - 5432:5432
 
   pgadmin:
@@ -20,5 +19,5 @@ services:
     ports:
       - "5050:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: root@mail.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: note-admin@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: .Eq@KzmeHF4-u&n
